[package]
name = "wasm-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "console", "Storage", "Element", "Location"] }
gloo = { version = "0.10", features = ["timers", "events"] }
three-d = "0.15" # or use kiss3d or wgpu
spacetimedb = "0.1" # or latest version from GitHub
console_error_panic_hook = "0.1.6"

[features]
default = []
